# simple-notifications

./: LICENSE  README.md  setup.py
.github/: FUNDING.yml
simple_notifications/: CMakeLists.txt  __init__.py
simple_notifications/src/: main.cpp
